<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PillBox Application</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="profile_guest_name">Guest</string>
    <string name="profile_guest_email">guest_profile@hacktusdynamics.com.tr</string>
    <string name="profile_guest_password">password</string>
    <string name="add_account">Add Acount</string>
    <string name="add_account_description">Add a new account.</string>
    <string name="manage_account">Manage Accounts</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_create_alarm">Create Alarm</string>
    <string name="drawer_item_medications">Medications</string>
    <string name="drawer_item_help">Help</string>

    <string name="section_format">from section: %1$d</string>
    <string name="create_alarm_activity_title">Create PillBox Alarms</string>

    <string name="manage_account_activity_title">Manage Accounts</string>
    <string name="delete_message">Are you sure,You wanted to delete this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cannot_delete_guest">You cannot delete Guest User</string>

    <string name="user_name_title">User Name</string>
    <string name="user_name_hint">Enter User Name</string>

    <string name="account_contact">Add From Contact</string>
    <string name="account_dependent_phone_hint">Enter the notification phone number</string>
    <string name="account_password_hint">Password</string>
    <string name="account_email_hint">Email</string>
    <string name="account_name_hint">Name</string>

    <string name="add_account_activity_title">Add Account</string>

    <string name="empty_element_text">There are no alarm set for pill boxes</string>
    <string name="box_number">Box Number :</string>
    <string name="alarm_date_and_time">Alarm Date and Time :</string>
    <string name="box_state">Box State :</string>
    <string name="date_tv_text">date text</string>
    <string name="time_tv_text">time text</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
    <string name="create_datetime_for_pillbox">Create date and time for PillBox</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s box</item>
        <item quantity="other">%1$s boxes</item>
    </plurals>

    <string name="title_activity_alarm_pager">Alarms Page</string>
    <string name="alarms">Alarms : </string>
    <string name="connection_failed">Unable to connect device.</string>
    <string name="connection_lost">Device connection was lost.</string>
    <string name="bt_connect">Search Bluetooth Devices</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving.</string>
    <string name="bluetooth_disabled">Bluetooth was disabled, leaving.</string>
    <string name="title_connecting">Connecting…</string>
    <string name="title_connected">Connected </string>
    <string name="title_not_connected">Not connected</string>
    <string name="bluetooth_not_available">Bluetooth is not available.</string>
    <string name="not_connected">You are not connected to a pillbox</string>
    <string name="no_alarm_selected">There is no Alarm selected.</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Notification content -->
    <string name="notification_title">PillBox Alarm</string>
    <string name="notification_tickertext">PillBox, Medication alarm received.</string>
    <string name="notification_detail">"Alarm for box number: "</string>
    <string name="on_of_notification_label">You can on / of notification</string>
    <string name="on_off_email_label">You can on / off email messages.</string>

    <!-- HelpActivity content-->
    <string name="h0">You use the menu for all functionality.</string>
    <string name="h1">Use down arrow for Manage the Account.</string>
    <string name="h2">You can make the changes for User.</string>
    <string name="h3">You create the alarms from here.</string>
    <string name="h4">You can found the PillBox from Bluetooth button. Password: 1234</string>
    <string name="h5">You can set the alarm date and time for each box.</string>
    <string name="h6">You can send the alarms to the PillBox device with FAB button.</string>
    <string name="h7">Main Page shows the latest saved alarms.</string>


</resources>
