<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_help"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tr.com.hacktusdynamics.android.pbproject.ui.activities.HelpActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h0"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_00"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_11"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_22"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_33"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h4"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_44"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h5"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_55"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h6"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_66"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/h7"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ss_77"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
